src/tests/snapshots/treetop_core__tests__dns__tests__test_host_operations__bob_view_host_allow.snap
---
source: src/tests/dns.rs
expression: decision
---
{
  "Allow": {
    "policies": [
      {
        "literal": "@id(\"DNS.users_policy\")\npermit (\n    principal in DNS::Group::\"users\",\n    action == DNS::Action::\"view_host\",\n    resource is Host\n);",
        "json": {
          "effect": "permit",
          "principal": {
            "op": "in",
            "entity": {
              "type": "DNS::Group",
              "id": "users"
            }
          },
          "action": {
            "op": "==",
            "entity": {
              "type": "DNS::Action",
              "id": "view_host"
            }
          },
          "resource": {
            "op": "is",
            "entity_type": "Host"
          },
          "conditions": [],
          "annotations": {
            "id": "DNS.users_policy"
          }
        },
        "annotation_id": "DNS.users_policy",
        "cedar_id": "policy2"
      }
    ],
    "version": {
      "hash": "d7efadba123ba2cfa6cf1768a1db2a82b5a199190b1b9d344243d976e2b0f790",
      "loaded_at": "[timestamp]",
      "label_set": null,
      "generation": 1
    }
  }
}
