src/tests/snapshots/treetop_core__tests__dns__tests__test_host_operations__super_create_host_allow.snap
---
source: src/tests/dns.rs
expression: decision
---
{
  "Allow": {
    "policies": [
      {
        "literal": "@id(\"global.super_admin_allow_all_policy\")\npermit (\n    principal == User::\"super\",\n    action,\n    resource\n);",
        "json": {
          "effect": "permit",
          "principal": {
            "op": "==",
            "entity": {
              "type": "User",
              "id": "super"
            }
          },
          "action": {
            "op": "All"
          },
          "resource": {
            "op": "All"
          },
          "conditions": [],
          "annotations": {
            "id": "global.super_admin_allow_all_policy"
          }
        },
        "annotation_id": "global.super_admin_allow_all_policy",
        "cedar_id": "policy8"
      }
    ],
    "version": {
      "hash": "d7efadba123ba2cfa6cf1768a1db2a82b5a199190b1b9d344243d976e2b0f790",
      "loaded_at": "[timestamp]",
      "label_set": null,
      "generation": 1
    }
  }
}
